set(LV_CONF_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lvgl/lv_conf.h")
idf_component_register(
  SRCS
    "libs/aqi_alert.c"
    "libs/gatt.c"
    "libs/http_buffer.c"
    "libs/i2c.c"
    "libs/nvs.c"
    "libs/ota.c"
    "libs/sensirion_gas_index_algorithm.c"
    "libs/sensor_utils.c"
    "libs/weather_api.c"
    "lvgl/fonts/large_number.c"
    "lvgl/fonts/medium_number.c"
    "lvgl/fonts/sharp_display_font.c"
    "lvgl/fonts/small_number.c"
    "lvgl/fonts/sublabel.c"
    "lvgl/img/logo.c"
    "lvgl/img/material_clear_night.c"
    "lvgl/img/material_cloud.c"
    "lvgl/img/material_foggy.c"
    "lvgl/img/material_mode_fan.c"
    "lvgl/img/material_partly_cloudy_day.c"
    "lvgl/img/material_partly_cloudy_night.c"
    "lvgl/img/material_rainy.c"
    "lvgl/img/material_snowy.c"
    "lvgl/img/material_sunny.c"
    "lvgl/img/material_thunderstorm.c"
    "lvgl/lv_helper.c"
    "lvgl/styles.c"
    "lvgl/utils.c"
    "lvgl/views/aqi_alert.c"
    "lvgl/views/aqi_grid.c"
    "lvgl/views/clock.c"
    "lvgl/views/logo.c"
    "lvgl/views/passkey.c"
    "lvgl/views/weather.c"
    "main.c"
    "tasks/ble.c"
    "tasks/eink_display.c"
    "tasks/led.c"
    "tasks/scd4x.c"
    "tasks/sgp4x.c"
    "tasks/sharp_display.c"
    "tasks/sht4x.c"
    "tasks/tasks.c"
    "tasks/weather.c"
    "tasks/wifi.c"
  INCLUDE_DIRS
    "."
  REQUIRES
    app_update
    bootloader_support
    bt
    driver
    esp_http_client
    esp_partition
    esp-tls
    json
    lvgl
    nvs_flash
)
idf_build_set_property(COMPILE_OPTIONS "-DLV_CONF_PATH=${LV_CONF_PATH}" APPEND)
idf_build_set_property(COMPILE_OPTIONS "-DLV_KCONFIG_IGNORE=1" APPEND)
